change location for assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -64,7 +64,7 @@ flutter:
   fonts:
     - family: GT Sectra Fine Regular
       fonts:
-        - asset: lib/assets/fonts/GT Sectra Fine Regular.ttf
+        - asset: assets/fonts/GT Sectra Fine Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
