--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.3.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.0.3
@@ -39,7 +40,8 @@ dependencies:
   get_it: ^7.2.0
   go_router: ^6.5.0
   google_fonts: ^4.0.3
-
+  json_annotation: ^4.4.0
+  json_serializable: ^6.6.1
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
