--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^4.0.3
   json_annotation: ^4.4.0
   json_serializable: ^6.6.1
+  shimmer: ^2.0.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
