--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_annotation: ^4.4.0
   json_serializable: ^6.6.1
   shimmer: ^2.0.0
+  url_launcher: ^6.1.10
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
