--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bookly_app">
+
+
+    <!-- Provide required visibility configuration for API level 30 and above -->
+    <uses-permission android:name = "android.permission.INTERNET">
+    <queries>
+    <!-- If your app checks for HTTPS support -->
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+
+    </queries>
    <application
         android:label="bookly_app"
         android:name="${applicationName}"
