--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bookly_app">
+     <uses-permission android:name="android.permission.INTERNET"/> 
+<queries>
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="https" />
+  </intent>
 
-
-    <!-- Provide required visibility configuration for API level 30 and above -->
-    <uses-permission android:name = "android.permission.INTERNET">
-    <queries>
-    <!-- If your app checks for HTTPS support -->
-    <intent>
-        <action android:name="android.intent.action.VIEW" />
-        <data android:scheme="https" />
-    </intent>
-
-    </queries>
+  
+</queries>
    <application
         android:label="bookly_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
