--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_bottom_bar: ^1.2.2
   build_runner: ^2.3.3
   cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
